# durationfmt-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: basic.rs
src/: lib.rs
